src/parser.output
Terminals unused in grammar

   TOKEN_AUTO
   TOKEN_ELSE
   TOKEN_WHILE
   TOKEN_COMMENT_SINGLE
   TOKEN_COMMENT_MULTI
   TOKEN_IDENTL
   TOKEN_INVALID
   TOKEN_IDENTN
   TOKEN_UNTCOM


Grammar

    0 $accept: program $end

    1 program: decllist
    2        | %empty

    3 expr0: expr0 TOKEN_ASSIGNMENT expr1
    4      | expr1

    5 expr1: expr1 TOKEN_OR expr2
    6      | expr2

    7 expr2: expr2 TOKEN_AND expr3
    8      | expr3

    9 expr3: expr3 TOKEN_LESSER expr4
   10      | expr3 TOKEN_LESSER_EQUAL expr4
   11      | expr3 TOKEN_GREATER expr4
   12      | expr3 TOKEN_GREATER_EQUAL expr4
   13      | expr3 TOKEN_EQUALITY expr4
   14      | expr3 TOKEN_INEQUALITY expr4
   15      | expr4

   16 expr4: expr4 TOKEN_ADDITION expr5
   17      | expr4 TOKEN_SUBTRACTION expr5
   18      | expr5

   19 expr5: expr5 TOKEN_MULTIPLICATION expr6
   20      | expr5 TOKEN_DIVISION expr6
   21      | expr5 TOKEN_MODULO expr6
   22      | expr6

   23 expr6: expr6 TOKEN_EXPONENTIATION expr7
   24      | expr7

   25 expr7: TOKEN_SUBTRACTION expr8
   26      | TOKEN_NOT expr8
   27      | expr8

   28 expr8: expr9 TOKEN_INCREMENT
   29      | expr9 TOKEN_DECREMENT
   30      | expr9

   31 expr9: TOKEN_PAREN_OPEN expr0 TOKEN_PAREN_CLOSE
   32      | TOKEN_IDENTIFIER TOKEN_BRACK_OPEN expr0 TOKEN_BRACK_CLOSE
   33      | TOKEN_IDENTIFIER TOKEN_PAREN_OPEN optexprlist TOKEN_PAREN_CLOSE
   34      | expratom

   35 expratom: TOKEN_INTEGER_LITERAL
   36         | TOKEN_FLOAT_LITERAL
   37         | TOKEN_CHAR_LITERAL
   38         | TOKEN_STRING_LITERAL
   39         | TOKEN_IDENTIFIER
   40         | TOKEN_TRUE
   41         | TOKEN_FALSE
   42         | TOKEN_BRACE_OPEN exprlist TOKEN_BRACE_CLOSE

   43 optexpr: expr0
   44        | %empty

   45 exprlist: expr0 TOKEN_COMMA exprlist
   46         | expr0

   47 optexprlist: exprlist
   48            | %empty

   49 type: TOKEN_INTEGER
   50     | TOKEN_FLOAT
   51     | TOKEN_BOOLEAN
   52     | TOKEN_CHAR
   53     | TOKEN_STRING
   54     | TOKEN_VOID
   55     | TOKEN_ARRAY TOKEN_BRACK_OPEN expr0 TOKEN_BRACK_CLOSE type
   56     | TOKEN_FUNCTION type TOKEN_PAREN_OPEN optparamlist TOKEN_PAREN_CLOSE

   57 param: TOKEN_IDENTIFIER TOKEN_COLON type

   58 paramlist: param TOKEN_COMMA paramlist
   59          | param

   60 optparamlist: paramlist
   61             | %empty

   62 stmt: decl
   63     | expr0 TOKEN_SEMICOLON
   64     | TOKEN_IF TOKEN_PAREN_OPEN expr0 TOKEN_PAREN_CLOSE stmt
   65     | TOKEN_FOR TOKEN_PAREN_OPEN optexpr TOKEN_SEMICOLON optexpr TOKEN_SEMICOLON optexpr TOKEN_PAREN_CLOSE stmt
   66     | TOKEN_PRINT optexprlist TOKEN_SEMICOLON
   67     | TOKEN_RETURN optexpr TOKEN_SEMICOLON
   68     | TOKEN_BRACE_OPEN optstmtlist TOKEN_BRACE_CLOSE

   69 stmtlist: stmt stmtlist
   70         | stmt

   71 optstmtlist: stmtlist
   72            | %empty

   73 decl: TOKEN_IDENTIFIER TOKEN_COLON type TOKEN_SEMICOLON
   74     | TOKEN_IDENTIFIER TOKEN_COLON type TOKEN_ASSIGNMENT expr0 TOKEN_SEMICOLON
   75     | TOKEN_IDENTIFIER TOKEN_COLON type TOKEN_ASSIGNMENT TOKEN_BRACE_OPEN optstmtlist TOKEN_BRACE_CLOSE

   76 decllist: decl decllist
   77         | decl


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_ARRAY (258) 55
TOKEN_AUTO (259)
TOKEN_BOOLEAN (260) 51
TOKEN_CHAR (261) 52
TOKEN_ELSE (262)
TOKEN_FALSE (263) 41
TOKEN_FLOAT (264) 50
TOKEN_FOR (265) 65
TOKEN_FUNCTION (266) 56
TOKEN_IF (267) 64
TOKEN_INTEGER (268) 49
TOKEN_PRINT (269) 66
TOKEN_RETURN (270) 67
TOKEN_STRING (271) 53
TOKEN_TRUE (272) 40
TOKEN_VOID (273) 54
TOKEN_WHILE (274)
TOKEN_INCREMENT (275) 28
TOKEN_DECREMENT (276) 29
TOKEN_NOT (277) 26
TOKEN_EXPONENTIATION (278) 23
TOKEN_MULTIPLICATION (279) 19
TOKEN_DIVISION (280) 20
TOKEN_MODULO (281) 21
TOKEN_ADDITION (282) 16
TOKEN_SUBTRACTION (283) 17 25
TOKEN_LESSER (284) 9
TOKEN_LESSER_EQUAL (285) 10
TOKEN_GREATER (286) 11
TOKEN_GREATER_EQUAL (287) 12
TOKEN_EQUALITY (288) 13
TOKEN_INEQUALITY (289) 14
TOKEN_AND (290) 7
TOKEN_OR (291) 5
TOKEN_ASSIGNMENT (292) 3 74 75
TOKEN_BRACE_OPEN (293) 42 68 75
TOKEN_BRACE_CLOSE (294) 42 68 75
TOKEN_PAREN_OPEN (295) 31 33 56 64 65
TOKEN_PAREN_CLOSE (296) 31 33 56 64 65
TOKEN_BRACK_OPEN (297) 32 55
TOKEN_BRACK_CLOSE (298) 32 55
TOKEN_COLON (299) 57 73 74 75
TOKEN_SEMICOLON (300) 63 65 66 67 73 74
TOKEN_COMMA (301) 45 58
TOKEN_COMMENT_SINGLE (302)
TOKEN_COMMENT_MULTI (303)
TOKEN_INTEGER_LITERAL (304) 35
TOKEN_FLOAT_LITERAL (305) 36
TOKEN_CHAR_LITERAL (306) 37
TOKEN_STRING_LITERAL (307) 38
TOKEN_IDENTIFIER (308) 32 33 39 57 73 74 75
TOKEN_IDENTL (309)
TOKEN_INVALID (310)
TOKEN_IDENTN (311)
TOKEN_UNTCOM (312)


Nonterminals, with rules where they appear

$accept (58)
    on left: 0
program (59)
    on left: 1 2, on right: 0
expr0 (60)
    on left: 3 4, on right: 3 31 32 43 45 46 55 63 64 74
expr1 (61)
    on left: 5 6, on right: 3 4 5
expr2 (62)
    on left: 7 8, on right: 5 6 7
expr3 (63)
    on left: 9 10 11 12 13 14 15, on right: 7 8 9 10 11 12 13 14
expr4 (64)
    on left: 16 17 18, on right: 9 10 11 12 13 14 15 16 17
expr5 (65)
    on left: 19 20 21 22, on right: 16 17 18 19 20 21
expr6 (66)
    on left: 23 24, on right: 19 20 21 22 23
expr7 (67)
    on left: 25 26 27, on right: 23 24
expr8 (68)
    on left: 28 29 30, on right: 25 26 27
expr9 (69)
    on left: 31 32 33 34, on right: 28 29 30
expratom (70)
    on left: 35 36 37 38 39 40 41 42, on right: 34
optexpr (71)
    on left: 43 44, on right: 65 67
exprlist (72)
    on left: 45 46, on right: 42 45 47
optexprlist (73)
    on left: 47 48, on right: 33 66
type (74)
    on left: 49 50 51 52 53 54 55 56, on right: 55 56 57 73 74 75
param (75)
    on left: 57, on right: 58 59
paramlist (76)
    on left: 58 59, on right: 58 60
optparamlist (77)
    on left: 60 61, on right: 56
stmt (78)
    on left: 62 63 64 65 66 67 68, on right: 64 65 69 70
stmtlist (79)
    on left: 69 70, on right: 69 71
optstmtlist (80)
    on left: 71 72, on right: 68 75
decl (81)
    on left: 73 74 75, on right: 62 76 77
decllist (82)
    on left: 76 77, on right: 1 76


State 0

    0 $accept: . program $end

    TOKEN_IDENTIFIER  shift, and go to state 1

    $default  reduce using rule 2 (program)

    program   go to state 2
    decl      go to state 3
    decllist  go to state 4


State 1

   73 decl: TOKEN_IDENTIFIER . TOKEN_COLON type TOKEN_SEMICOLON
   74     | TOKEN_IDENTIFIER . TOKEN_COLON type TOKEN_ASSIGNMENT expr0 TOKEN_SEMICOLON
   75     | TOKEN_IDENTIFIER . TOKEN_COLON type TOKEN_ASSIGNMENT TOKEN_BRACE_OPEN optstmtlist TOKEN_BRACE_CLOSE

    TOKEN_COLON  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

   76 decllist: decl . decllist
   77         | decl .

    TOKEN_IDENTIFIER  shift, and go to state 1

    $default  reduce using rule 77 (decllist)

    decl      go to state 3
    decllist  go to state 7


State 4

    1 program: decllist .

    $default  reduce using rule 1 (program)


State 5

   73 decl: TOKEN_IDENTIFIER TOKEN_COLON . type TOKEN_SEMICOLON
   74     | TOKEN_IDENTIFIER TOKEN_COLON . type TOKEN_ASSIGNMENT expr0 TOKEN_SEMICOLON
   75     | TOKEN_IDENTIFIER TOKEN_COLON . type TOKEN_ASSIGNMENT TOKEN_BRACE_OPEN optstmtlist TOKEN_BRACE_CLOSE

    TOKEN_ARRAY     shift, and go to state 8
    TOKEN_BOOLEAN   shift, and go to state 9
    TOKEN_CHAR      shift, and go to state 10
    TOKEN_FLOAT     shift, and go to state 11
    TOKEN_FUNCTION  shift, and go to state 12
    TOKEN_INTEGER   shift, and go to state 13
    TOKEN_STRING    shift, and go to state 14
    TOKEN_VOID      shift, and go to state 15

    type  go to state 16


State 6

    0 $accept: program $end .

    $default  accept


State 7

   76 decllist: decl decllist .

    $default  reduce using rule 76 (decllist)


State 8

   55 type: TOKEN_ARRAY . TOKEN_BRACK_OPEN expr0 TOKEN_BRACK_CLOSE type

    TOKEN_BRACK_OPEN  shift, and go to state 17


State 9

   51 type: TOKEN_BOOLEAN .

    $default  reduce using rule 51 (type)


State 10

   52 type: TOKEN_CHAR .

    $default  reduce using rule 52 (type)


State 11

   50 type: TOKEN_FLOAT .

    $default  reduce using rule 50 (type)


State 12

   56 type: TOKEN_FUNCTION . type TOKEN_PAREN_OPEN optparamlist TOKEN_PAREN_CLOSE

    TOKEN_ARRAY     shift, and go to state 8
    TOKEN_BOOLEAN   shift, and go to state 9
    TOKEN_CHAR      shift, and go to state 10
    TOKEN_FLOAT     shift, and go to state 11
    TOKEN_FUNCTION  shift, and go to state 12
    TOKEN_INTEGER   shift, and go to state 13
    TOKEN_STRING    shift, and go to state 14
    TOKEN_VOID      shift, and go to state 15

    type  go to state 18


State 13

   49 type: TOKEN_INTEGER .

    $default  reduce using rule 49 (type)


State 14

   53 type: TOKEN_STRING .

    $default  reduce using rule 53 (type)


State 15

   54 type: TOKEN_VOID .

    $default  reduce using rule 54 (type)


State 16

   73 decl: TOKEN_IDENTIFIER TOKEN_COLON type . TOKEN_SEMICOLON
   74     | TOKEN_IDENTIFIER TOKEN_COLON type . TOKEN_ASSIGNMENT expr0 TOKEN_SEMICOLON
   75     | TOKEN_IDENTIFIER TOKEN_COLON type . TOKEN_ASSIGNMENT TOKEN_BRACE_OPEN optstmtlist TOKEN_BRACE_CLOSE

    TOKEN_ASSIGNMENT  shift, and go to state 19
    TOKEN_SEMICOLON   shift, and go to state 20


State 17

   55 type: TOKEN_ARRAY TOKEN_BRACK_OPEN . expr0 TOKEN_BRACK_CLOSE type

    TOKEN_FALSE            shift, and go to state 21
    TOKEN_TRUE             shift, and go to state 22
    TOKEN_NOT              shift, and go to state 23
    TOKEN_SUBTRACTION      shift, and go to state 24
    TOKEN_BRACE_OPEN       shift, and go to state 25
    TOKEN_PAREN_OPEN       shift, and go to state 26
    TOKEN_INTEGER_LITERAL  shift, and go to state 27
    TOKEN_FLOAT_LITERAL    shift, and go to state 28
    TOKEN_CHAR_LITERAL     shift, and go to state 29
    TOKEN_STRING_LITERAL   shift, and go to state 30
    TOKEN_IDENTIFIER       shift, and go to state 31

    expr0     go to state 32
    expr1     go to state 33
    expr2     go to state 34
    expr3     go to state 35
    expr4     go to state 36
    expr5     go to state 37
    expr6     go to state 38
    expr7     go to state 39
    expr8     go to state 40
    expr9     go to state 41
    expratom  go to state 42


State 18

   56 type: TOKEN_FUNCTION type . TOKEN_PAREN_OPEN optparamlist TOKEN_PAREN_CLOSE

    TOKEN_PAREN_OPEN  shift, and go to state 43


State 19

   74 decl: TOKEN_IDENTIFIER TOKEN_COLON type TOKEN_ASSIGNMENT . expr0 TOKEN_SEMICOLON
   75     | TOKEN_IDENTIFIER TOKEN_COLON type TOKEN_ASSIGNMENT . TOKEN_BRACE_OPEN optstmtlist TOKEN_BRACE_CLOSE

    TOKEN_FALSE            shift, and go to state 21
    TOKEN_TRUE             shift, and go to state 22
    TOKEN_NOT              shift, and go to state 23
    TOKEN_SUBTRACTION      shift, and go to state 24
    TOKEN_BRACE_OPEN       shift, and go to state 44
    TOKEN_PAREN_OPEN       shift, and go to state 26
    TOKEN_INTEGER_LITERAL  shift, and go to state 27
    TOKEN_FLOAT_LITERAL    shift, and go to state 28
    TOKEN_CHAR_LITERAL     shift, and go to state 29
    TOKEN_STRING_LITERAL   shift, and go to state 30
    TOKEN_IDENTIFIER       shift, and go to state 31

    expr0     go to state 45
    expr1     go to state 33
    expr2     go to state 34
    expr3     go to state 35
    expr4     go to state 36
    expr5     go to state 37
    expr6     go to state 38
    expr7     go to state 39
    expr8     go to state 40
    expr9     go to state 41
    expratom  go to state 42


State 20

   73 decl: TOKEN_IDENTIFIER TOKEN_COLON type TOKEN_SEMICOLON .

    $default  reduce using rule 73 (decl)


State 21

   41 expratom: TOKEN_FALSE .

    $default  reduce using rule 41 (expratom)


State 22

   40 expratom: TOKEN_TRUE .

    $default  reduce using rule 40 (expratom)


State 23

   26 expr7: TOKEN_NOT . expr8

    TOKEN_FALSE            shift, and go to state 21
    TOKEN_TRUE             shift, and go to state 22
    TOKEN_BRACE_OPEN       shift, and go to state 25
    TOKEN_PAREN_OPEN       shift, and go to state 26
    TOKEN_INTEGER_LITERAL  shift, and go to state 27
    TOKEN_FLOAT_LITERAL    shift, and go to state 28
    TOKEN_CHAR_LITERAL     shift, and go to state 29
    TOKEN_STRING_LITERAL   shift, and go to state 30
    TOKEN_IDENTIFIER       shift, and go to state 31

    expr8     go to state 46
    expr9     go to state 41
    expratom  go to state 42


State 24

   25 expr7: TOKEN_SUBTRACTION . expr8

    TOKEN_FALSE            shift, and go to state 21
    TOKEN_TRUE             shift, and go to state 22
    TOKEN_BRACE_OPEN       shift, and go to state 25
    TOKEN_PAREN_OPEN       shift, and go to state 26
    TOKEN_INTEGER_LITERAL  shift, and go to state 27
    TOKEN_FLOAT_LITERAL    shift, and go to state 28
    TOKEN_CHAR_LITERAL     shift, and go to state 29
    TOKEN_STRING_LITERAL   shift, and go to state 30
    TOKEN_IDENTIFIER       shift, and go to state 31

    expr8     go to state 47
    expr9     go to state 41
    expratom  go to state 42


State 25

   42 expratom: TOKEN_BRACE_OPEN . exprlist TOKEN_BRACE_CLOSE

    TOKEN_FALSE            shift, and go to state 21
    TOKEN_TRUE             shift, and go to state 22
    TOKEN_NOT              shift, and go to state 23
    TOKEN_SUBTRACTION      shift, and go to state 24
    TOKEN_BRACE_OPEN       shift, and go to state 25
    TOKEN_PAREN_OPEN       shift, and go to state 26
    TOKEN_INTEGER_LITERAL  shift, and go to state 27
    TOKEN_FLOAT_LITERAL    shift, and go to state 28
    TOKEN_CHAR_LITERAL     shift, and go to state 29
    TOKEN_STRING_LITERAL   shift, and go to state 30
    TOKEN_IDENTIFIER       shift, and go to state 31

    expr0     go to state 48
    expr1     go to state 33
    expr2     go to state 34
    expr3     go to state 35
    expr4     go to state 36
    expr5     go to state 37
    expr6     go to state 38
    expr7     go to state 39
    expr8     go to state 40
    expr9     go to state 41
    expratom  go to state 42
    exprlist  go to state 49


State 26

   31 expr9: TOKEN_PAREN_OPEN . expr0 TOKEN_PAREN_CLOSE

    TOKEN_FALSE            shift, and go to state 21
    TOKEN_TRUE             shift, and go to state 22
    TOKEN_NOT              shift, and go to state 23
    TOKEN_SUBTRACTION      shift, and go to state 24
    TOKEN_BRACE_OPEN       shift, and go to state 25
    TOKEN_PAREN_OPEN       shift, and go to state 26
    TOKEN_INTEGER_LITERAL  shift, and go to state 27
    TOKEN_FLOAT_LITERAL    shift, and go to state 28
    TOKEN_CHAR_LITERAL     shift, and go to state 29
    TOKEN_STRING_LITERAL   shift, and go to state 30
    TOKEN_IDENTIFIER       shift, and go to state 31

    expr0     go to state 50
    expr1     go to state 33
    expr2     go to state 34
    expr3     go to state 35
    expr4     go to state 36
    expr5     go to state 37
    expr6     go to state 38
    expr7     go to state 39
    expr8     go to state 40
    expr9     go to state 41
    expratom  go to state 42


State 27

   35 expratom: TOKEN_INTEGER_LITERAL .

    $default  reduce using rule 35 (expratom)


State 28

   36 expratom: TOKEN_FLOAT_LITERAL .

    $default  reduce using rule 36 (expratom)


State 29

   37 expratom: TOKEN_CHAR_LITERAL .

    $default  reduce using rule 37 (expratom)


State 30

   38 expratom: TOKEN_STRING_LITERAL .

    $default  reduce using rule 38 (expratom)


State 31

   32 expr9: TOKEN_IDENTIFIER . TOKEN_BRACK_OPEN expr0 TOKEN_BRACK_CLOSE
   33      | TOKEN_IDENTIFIER . TOKEN_PAREN_OPEN optexprlist TOKEN_PAREN_CLOSE
   39 expratom: TOKEN_IDENTIFIER .

    TOKEN_PAREN_OPEN  shift, and go to state 51
    TOKEN_BRACK_OPEN  shift, and go to state 52

    $default  reduce using rule 39 (expratom)


State 32

    3 expr0: expr0 . TOKEN_ASSIGNMENT expr1
   55 type: TOKEN_ARRAY TOKEN_BRACK_OPEN expr0 . TOKEN_BRACK_CLOSE type

    TOKEN_ASSIGNMENT   shift, and go to state 53
    TOKEN_BRACK_CLOSE  shift, and go to state 54


State 33

    4 expr0: expr1 .
    5 expr1: expr1 . TOKEN_OR expr2

    TOKEN_OR  shift, and go to state 55

    $default  reduce using rule 4 (expr0)


State 34

    6 expr1: expr2 .
    7 expr2: expr2 . TOKEN_AND expr3

    TOKEN_AND  shift, and go to state 56

    $default  reduce using rule 6 (expr1)


State 35

    8 expr2: expr3 .
    9 expr3: expr3 . TOKEN_LESSER expr4
   10      | expr3 . TOKEN_LESSER_EQUAL expr4
   11      | expr3 . TOKEN_GREATER expr4
   12      | expr3 . TOKEN_GREATER_EQUAL expr4
   13      | expr3 . TOKEN_EQUALITY expr4
   14      | expr3 . TOKEN_INEQUALITY expr4

    TOKEN_LESSER         shift, and go to state 57
    TOKEN_LESSER_EQUAL   shift, and go to state 58
    TOKEN_GREATER        shift, and go to state 59
    TOKEN_GREATER_EQUAL  shift, and go to state 60
    TOKEN_EQUALITY       shift, and go to state 61
    TOKEN_INEQUALITY     shift, and go to state 62

    $default  reduce using rule 8 (expr2)


State 36

   15 expr3: expr4 .
   16 expr4: expr4 . TOKEN_ADDITION expr5
   17      | expr4 . TOKEN_SUBTRACTION expr5

    TOKEN_ADDITION     shift, and go to state 63
    TOKEN_SUBTRACTION  shift, and go to state 64

    $default  reduce using rule 15 (expr3)


State 37

   18 expr4: expr5 .
   19 expr5: expr5 . TOKEN_MULTIPLICATION expr6
   20      | expr5 . TOKEN_DIVISION expr6
   21      | expr5 . TOKEN_MODULO expr6

    TOKEN_MULTIPLICATION  shift, and go to state 65
    TOKEN_DIVISION        shift, and go to state 66
    TOKEN_MODULO          shift, and go to state 67

    $default  reduce using rule 18 (expr4)


State 38

   22 expr5: expr6 .
   23 expr6: expr6 . TOKEN_EXPONENTIATION expr7

    TOKEN_EXPONENTIATION  shift, and go to state 68

    $default  reduce using rule 22 (expr5)


State 39

   24 expr6: expr7 .

    $default  reduce using rule 24 (expr6)


State 40

   27 expr7: expr8 .

    $default  reduce using rule 27 (expr7)


State 41

   28 expr8: expr9 . TOKEN_INCREMENT
   29      | expr9 . TOKEN_DECREMENT
   30      | expr9 .

    TOKEN_INCREMENT  shift, and go to state 69
    TOKEN_DECREMENT  shift, and go to state 70

    $default  reduce using rule 30 (expr8)


State 42

   34 expr9: expratom .

    $default  reduce using rule 34 (expr9)


State 43

   56 type: TOKEN_FUNCTION type TOKEN_PAREN_OPEN . optparamlist TOKEN_PAREN_CLOSE

    TOKEN_IDENTIFIER  shift, and go to state 71

    $default  reduce using rule 61 (optparamlist)

    param         go to state 72
    paramlist     go to state 73
    optparamlist  go to state 74


State 44

   42 expratom: TOKEN_BRACE_OPEN . exprlist TOKEN_BRACE_CLOSE
   75 decl: TOKEN_IDENTIFIER TOKEN_COLON type TOKEN_ASSIGNMENT TOKEN_BRACE_OPEN . optstmtlist TOKEN_BRACE_CLOSE

    TOKEN_FALSE            shift, and go to state 21
    TOKEN_FOR              shift, and go to state 75
    TOKEN_IF               shift, and go to state 76
    TOKEN_PRINT            shift, and go to state 77
    TOKEN_RETURN           shift, and go to state 78
    TOKEN_TRUE             shift, and go to state 22
    TOKEN_NOT              shift, and go to state 23
    TOKEN_SUBTRACTION      shift, and go to state 24
    TOKEN_BRACE_OPEN       shift, and go to state 79
    TOKEN_PAREN_OPEN       shift, and go to state 26
    TOKEN_INTEGER_LITERAL  shift, and go to state 27
    TOKEN_FLOAT_LITERAL    shift, and go to state 28
    TOKEN_CHAR_LITERAL     shift, and go to state 29
    TOKEN_STRING_LITERAL   shift, and go to state 30
    TOKEN_IDENTIFIER       shift, and go to state 80

    $default  reduce using rule 72 (optstmtlist)

    expr0        go to state 81
    expr1        go to state 33
    expr2        go to state 34
    expr3        go to state 35
    expr4        go to state 36
    expr5        go to state 37
    expr6        go to state 38
    expr7        go to state 39
    expr8        go to state 40
    expr9        go to state 41
    expratom     go to state 42
    exprlist     go to state 49
    stmt         go to state 82
    stmtlist     go to state 83
    optstmtlist  go to state 84
    decl         go to state 85


State 45

    3 expr0: expr0 . TOKEN_ASSIGNMENT expr1
   74 decl: TOKEN_IDENTIFIER TOKEN_COLON type TOKEN_ASSIGNMENT expr0 . TOKEN_SEMICOLON

    TOKEN_ASSIGNMENT  shift, and go to state 53
    TOKEN_SEMICOLON   shift, and go to state 86


State 46

   26 expr7: TOKEN_NOT expr8 .

    $default  reduce using rule 26 (expr7)


State 47

   25 expr7: TOKEN_SUBTRACTION expr8 .

    $default  reduce using rule 25 (expr7)


State 48

    3 expr0: expr0 . TOKEN_ASSIGNMENT expr1
   45 exprlist: expr0 . TOKEN_COMMA exprlist
   46         | expr0 .

    TOKEN_ASSIGNMENT  shift, and go to state 53
    TOKEN_COMMA       shift, and go to state 87

    $default  reduce using rule 46 (exprlist)


State 49

   42 expratom: TOKEN_BRACE_OPEN exprlist . TOKEN_BRACE_CLOSE

    TOKEN_BRACE_CLOSE  shift, and go to state 88


State 50

    3 expr0: expr0 . TOKEN_ASSIGNMENT expr1
   31 expr9: TOKEN_PAREN_OPEN expr0 . TOKEN_PAREN_CLOSE

    TOKEN_ASSIGNMENT   shift, and go to state 53
    TOKEN_PAREN_CLOSE  shift, and go to state 89


State 51

   33 expr9: TOKEN_IDENTIFIER TOKEN_PAREN_OPEN . optexprlist TOKEN_PAREN_CLOSE

    TOKEN_FALSE            shift, and go to state 21
    TOKEN_TRUE             shift, and go to state 22
    TOKEN_NOT              shift, and go to state 23
    TOKEN_SUBTRACTION      shift, and go to state 24
    TOKEN_BRACE_OPEN       shift, and go to state 25
    TOKEN_PAREN_OPEN       shift, and go to state 26
    TOKEN_INTEGER_LITERAL  shift, and go to state 27
    TOKEN_FLOAT_LITERAL    shift, and go to state 28
    TOKEN_CHAR_LITERAL     shift, and go to state 29
    TOKEN_STRING_LITERAL   shift, and go to state 30
    TOKEN_IDENTIFIER       shift, and go to state 31

    $default  reduce using rule 48 (optexprlist)

    expr0        go to state 48
    expr1        go to state 33
    expr2        go to state 34
    expr3        go to state 35
    expr4        go to state 36
    expr5        go to state 37
    expr6        go to state 38
    expr7        go to state 39
    expr8        go to state 40
    expr9        go to state 41
    expratom     go to state 42
    exprlist     go to state 90
    optexprlist  go to state 91


State 52

   32 expr9: TOKEN_IDENTIFIER TOKEN_BRACK_OPEN . expr0 TOKEN_BRACK_CLOSE

    TOKEN_FALSE            shift, and go to state 21
    TOKEN_TRUE             shift, and go to state 22
    TOKEN_NOT              shift, and go to state 23
    TOKEN_SUBTRACTION      shift, and go to state 24
    TOKEN_BRACE_OPEN       shift, and go to state 25
    TOKEN_PAREN_OPEN       shift, and go to state 26
    TOKEN_INTEGER_LITERAL  shift, and go to state 27
    TOKEN_FLOAT_LITERAL    shift, and go to state 28
    TOKEN_CHAR_LITERAL     shift, and go to state 29
    TOKEN_STRING_LITERAL   shift, and go to state 30
    TOKEN_IDENTIFIER       shift, and go to state 31

    expr0     go to state 92
    expr1     go to state 33
    expr2     go to state 34
    expr3     go to state 35
    expr4     go to state 36
    expr5     go to state 37
    expr6     go to state 38
    expr7     go to state 39
    expr8     go to state 40
    expr9     go to state 41
    expratom  go to state 42


State 53

    3 expr0: expr0 TOKEN_ASSIGNMENT . expr1

    TOKEN_FALSE            shift, and go to state 21
    TOKEN_TRUE             shift, and go to state 22
    TOKEN_NOT              shift, and go to state 23
    TOKEN_SUBTRACTION      shift, and go to state 24
    TOKEN_BRACE_OPEN       shift, and go to state 25
    TOKEN_PAREN_OPEN       shift, and go to state 26
    TOKEN_INTEGER_LITERAL  shift, and go to state 27
    TOKEN_FLOAT_LITERAL    shift, and go to state 28
    TOKEN_CHAR_LITERAL     shift, and go to state 29
    TOKEN_STRING_LITERAL   shift, and go to state 30
    TOKEN_IDENTIFIER       shift, and go to state 31

    expr1     go to state 93
    expr2     go to state 34
    expr3     go to state 35
    expr4     go to state 36
    expr5     go to state 37
    expr6     go to state 38
    expr7     go to state 39
    expr8     go to state 40
    expr9     go to state 41
    expratom  go to state 42


State 54

   55 type: TOKEN_ARRAY TOKEN_BRACK_OPEN expr0 TOKEN_BRACK_CLOSE . type

    TOKEN_ARRAY     shift, and go to state 8
    TOKEN_BOOLEAN   shift, and go to state 9
    TOKEN_CHAR      shift, and go to state 10
    TOKEN_FLOAT     shift, and go to state 11
    TOKEN_FUNCTION  shift, and go to state 12
    TOKEN_INTEGER   shift, and go to state 13
    TOKEN_STRING    shift, and go to state 14
    TOKEN_VOID      shift, and go to state 15

    type  go to state 94


State 55

    5 expr1: expr1 TOKEN_OR . expr2

    TOKEN_FALSE            shift, and go to state 21
    TOKEN_TRUE             shift, and go to state 22
    TOKEN_NOT              shift, and go to state 23
    TOKEN_SUBTRACTION      shift, and go to state 24
    TOKEN_BRACE_OPEN       shift, and go to state 25
    TOKEN_PAREN_OPEN       shift, and go to state 26
    TOKEN_INTEGER_LITERAL  shift, and go to state 27
    TOKEN_FLOAT_LITERAL    shift, and go to state 28
    TOKEN_CHAR_LITERAL     shift, and go to state 29
    TOKEN_STRING_LITERAL   shift, and go to state 30
    TOKEN_IDENTIFIER       shift, and go to state 31

    expr2     go to state 95
    expr3     go to state 35
    expr4     go to state 36
    expr5     go to state 37
    expr6     go to state 38
    expr7     go to state 39
    expr8     go to state 40
    expr9     go to state 41
    expratom  go to state 42


State 56

    7 expr2: expr2 TOKEN_AND . expr3

    TOKEN_FALSE            shift, and go to state 21
    TOKEN_TRUE             shift, and go to state 22
    TOKEN_NOT              shift, and go to state 23
    TOKEN_SUBTRACTION      shift, and go to state 24
    TOKEN_BRACE_OPEN       shift, and go to state 25
    TOKEN_PAREN_OPEN       shift, and go to state 26
    TOKEN_INTEGER_LITERAL  shift, and go to state 27
    TOKEN_FLOAT_LITERAL    shift, and go to state 28
    TOKEN_CHAR_LITERAL     shift, and go to state 29
    TOKEN_STRING_LITERAL   shift, and go to state 30
    TOKEN_IDENTIFIER       shift, and go to state 31

    expr3     go to state 96
    expr4     go to state 36
    expr5     go to state 37
    expr6     go to state 38
    expr7     go to state 39
    expr8     go to state 40
    expr9     go to state 41
    expratom  go to state 42


State 57

    9 expr3: expr3 TOKEN_LESSER . expr4

    TOKEN_FALSE            shift, and go to state 21
    TOKEN_TRUE             shift, and go to state 22
    TOKEN_NOT              shift, and go to state 23
    TOKEN_SUBTRACTION      shift, and go to state 24
    TOKEN_BRACE_OPEN       shift, and go to state 25
    TOKEN_PAREN_OPEN       shift, and go to state 26
    TOKEN_INTEGER_LITERAL  shift, and go to state 27
    TOKEN_FLOAT_LITERAL    shift, and go to state 28
    TOKEN_CHAR_LITERAL     shift, and go to state 29
    TOKEN_STRING_LITERAL   shift, and go to state 30
    TOKEN_IDENTIFIER       shift, and go to state 31

    expr4     go to state 97
    expr5     go to state 37
    expr6     go to state 38
    expr7     go to state 39
    expr8     go to state 40
    expr9     go to state 41
    expratom  go to state 42


State 58

   10 expr3: expr3 TOKEN_LESSER_EQUAL . expr4

    TOKEN_FALSE            shift, and go to state 21
    TOKEN_TRUE             shift, and go to state 22
    TOKEN_NOT              shift, and go to state 23
    TOKEN_SUBTRACTION      shift, and go to state 24
    TOKEN_BRACE_OPEN       shift, and go to state 25
    TOKEN_PAREN_OPEN       shift, and go to state 26
    TOKEN_INTEGER_LITERAL  shift, and go to state 27
    TOKEN_FLOAT_LITERAL    shift, and go to state 28
    TOKEN_CHAR_LITERAL     shift, and go to state 29
    TOKEN_STRING_LITERAL   shift, and go to state 30
    TOKEN_IDENTIFIER       shift, and go to state 31

    expr4     go to state 98
    expr5     go to state 37
    expr6     go to state 38
    expr7     go to state 39
    expr8     go to state 40
    expr9     go to state 41
    expratom  go to state 42


State 59

   11 expr3: expr3 TOKEN_GREATER . expr4

    TOKEN_FALSE            shift, and go to state 21
    TOKEN_TRUE             shift, and go to state 22
    TOKEN_NOT              shift, and go to state 23
    TOKEN_SUBTRACTION      shift, and go to state 24
    TOKEN_BRACE_OPEN       shift, and go to state 25
    TOKEN_PAREN_OPEN       shift, and go to state 26
    TOKEN_INTEGER_LITERAL  shift, and go to state 27
    TOKEN_FLOAT_LITERAL    shift, and go to state 28
    TOKEN_CHAR_LITERAL     shift, and go to state 29
    TOKEN_STRING_LITERAL   shift, and go to state 30
    TOKEN_IDENTIFIER       shift, and go to state 31
